--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ body {
   background-color: #c3b9b9;
 }
 #container {
+  display: inline-block;
   width: 300px;
   margin: 0 auto;
   padding: 60px;
@@ -25,14 +26,16 @@ body {
 }
 #container h4{
   padding-top: 20px;
+  padding-bottom: 20px;
 }
 input {
   width: 100%;
   padding: 8px;
   margin-bottom: 10px;
+  text-align: center;
 }
 button {
-  width: 100%;
+  width: 50%;
   padding: 10px;
   background-color: #000000;
   color: white;
